Bug 122701 - Cannot disable OpenGL enabled in a previous version using gtk3
Summary: Cannot disable OpenGL enabled in a previous version using gtk3
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: LibreOffice (show other bugs)
Version:
(earliest affected)
6.1.4.2 release
Hardware: All Linux (All)
: medium normal
Assignee: Caolán McNamara
URL:
Whiteboard: target:6.3.0 target:6.2.1 target:6.1.5
Keywords: bibisected, bisected, regression
Depends on:
Blocks: Options-Dialog-View
  Show dependency treegraph
 
Reported: 2019-01-14 09:12 UTC by Mike Kaganski
Modified: 2019-01-16 01:09 UTC (History)
2 users (show)

See Also:
Crash report or crash signature:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Mike Kaganski 2019-01-14 09:12:21 UTC
After https://git.libreoffice.org/core/+/d967cc35fd0c77d9f3dd0b3d0c7df850db6ec274, the OpenGL option is hidden from the options dialog for gtk3. But as reported at https://ask.libreoffice.org/en/question/179220, apparently the previously-set option might still have some effects, at least disabling access to the HW acceleration selector, thus preventing user to configure options.

Caolán, could you please take a look?
Comment 1 Mike Kaganski 2019-01-14 09:21:14 UTC
it looks like for this case, possibly a fix could be conditionally return false in CanvasSettings::IsHardwareAccelerationRO() for gtk3 case, but is that a universal fix for all cases where the OpenGL setting is used?
Comment 2 Commit Notification 2019-01-14 11:10:57 UTC
Caolán McNamara committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/+/6c904345b1f3e02db5ab163f46517fec2b85e539%5E%21

Resolves: tdf#122701 opengl settings don't affect gtk3

It will be available in 6.3.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 3 Caolán McNamara 2019-01-14 11:17:22 UTC
backport to 6-2 in gerrit
Comment 4 Mike Kaganski 2019-01-15 06:43:29 UTC
Verified with current master (checked setting both UseOpenGL and ForceOpenGL under org.openoffice.Office.Common/VCL to true) - thanks!
Comment 5 Xisco Faulí 2019-01-15 12:39:20 UTC
(In reply to Caolán McNamara from comment #3)
> backport to 6-2 in gerrit

Caolán, should it be backported to 6-1 as well ?
Comment 6 Commit Notification 2019-01-15 12:44:57 UTC
Caolán McNamara committed a patch related to this issue.
It has been pushed to "libreoffice-6-2":

https://git.libreoffice.org/core/+/aa15463a2f303ab75679eefa4d8241f2b700684e%5E%21

Resolves: tdf#122701 opengl settings don't affect gtk3

It will be available in 6.2.1.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 7 Commit Notification 2019-01-16 01:09:45 UTC
Caolán McNamara committed a patch related to this issue.
It has been pushed to "libreoffice-6-1":

https://git.libreoffice.org/core/+/390ad702841fd247061377c044df446a7b2c587d%5E%21

Resolves: tdf#122701 opengl settings don't affect gtk3

It will be available in 6.1.5.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.