Resolves: tdf#122701 opengl settings don't affect gtk3

Change-Id: Iffcf9b6ea8d191a509c2ca451f2ce4a249fde922
Reviewed-on: https://gerrit.libreoffice.org/66292
Tested-by: Jenkins
Reviewed-by: Mike Kaganski <mike.kaganski@collabora.com>